[package]
name = "vim-commonmark"
version = "0.0.0"
authors = [
	"Caleb Maclennan <caleb@alerque.com>",
	"Felipe Morales <hel.sheep@gmail.com>" ]
edition = "2018"

[lib]
name = 'vim_commonmark'
crate-type = ["cdylib"]

[features]
default = ["lua"]
lua = ["mlua", "mlua_derive"]
python = ["pyo3"]

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.pulldown-cmark]
version = "0.7.2"
features = ["simd"]

[dependencies.mlua]
optional = true
version = "0.4.1"
default-features = false
features = [ "luajit", "module" ]

[dependencies.mlua_derive]
optional = true
version = "0.4.0"

[dependencies.pyo3]
optional = true
version = "0.11.1"
features = ["extension-module"]

[profile.release]
lto = true
